--- a/style.css
+++ b/style.css
@@ -35,19 +35,20 @@ body{
     width:500px;
     height : 125px;
     position: absolute;
-    right:0;
+    right:100px;
     top:0;
 }
 #question p{
     margin : 0;
     padding : 15px;
     font-size: 1.25em;
+    text-align: center;
 }
 
 #choices{
     width : 480px;
     position: absolute;
-    right : 0;
+    right : 100px;
     top : 125px;
     padding : 10px
 }
@@ -69,18 +70,15 @@ body{
 #scoreContainer{
     margin : 20px auto;
     background-color: white;
-    opacity: 0.8;
     height: 300px;
     width : 700px;
     border-radius: 5px;
     box-shadow: 0px 5px 15px 0px;
     position: relative;
     display: none;
-}
-#scoreContainer img{
-    position: absolute;
-    top:100px;
-    left:325px;
+    text-align: center;
+    font-weight: bolder;
+    padding-top: 30px;
 }
 #scoreContainer p{
     position: absolute;
@@ -89,9 +87,13 @@ body{
     height :59px;
     top:130px;
     left:325px;
-    font-size: 1.5em;
+    font-size: 1em;
     font-weight: bold;
     text-align: center;
+}
+ul {
+    text-align: center;
+    list-style-position: inside;
 }
 
 
