--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
     font-size: 20px;
     font-family: monospace;
+    background-color:rgb(182, 182, 182);
 }
 
 #container{
@@ -11,6 +12,7 @@ body{
     border-radius: 5px;
     box-shadow: 0px 5px 15px 0px;
     position: relative;
+    top: 100px;
 }
 #start{
     font-size: 1.5em;
@@ -43,6 +45,7 @@ body{
     padding : 15px;
     font-size: 1.25em;
     text-align: center;
+    color: rgb(80, 159, 165);
 }
 
 #choices{
@@ -56,14 +59,16 @@ body{
     display: inline-block;
     width : 135px;
     text-align: center;
-    border : 1px solid grey;
+    border : 1px solid rgb(121, 69, 126);
     border-radius: 5px;
     cursor: pointer;
     padding : 5px;
+    color: rgb(80, 159, 165);
 }
 .choice:hover{
-    border : 2px solid grey;
+    border : 2px solid rgb(160, 110, 189);
     font-weight: bold;
+    color: rgb(42, 214, 206);
 }
 
 
@@ -79,6 +84,7 @@ body{
     text-align: center;
     font-weight: bolder;
     padding-top: 30px;
+    color: rgb(42, 214, 206);
 }
 #scoreContainer p{
     position: absolute;
@@ -87,7 +93,7 @@ body{
     height :59px;
     top:130px;
     left:325px;
-    font-size: 1em;
+    font-size: 1.5em;
     font-weight: bold;
     text-align: center;
 }
@@ -95,6 +101,8 @@ ul {
     text-align: center;
     list-style-position: inside;
 }
+
+
 
 
 
